2005-06-26 Alasdair Allan <aa@astro.ex.ac.uk> 

        * Query/Query/Sesame.pm: Fixed problems with Sesame endpoint.
	
2005-06-24 Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

	* IO/FITSTable.pm: Modified to use flux measurements directly
	  instead of importing a specific one into a magnitude. Added
	  support for reading DATE-OBS header to apply timestamp for
	  flux measurements.

2005-06-23 Alasdair Allan <aa@astro.ex.ac.uk> 

        * Fixed after slight breakage from modifications to Astro::Flux
	
2005-06-20 Alasdair Allan <aa@astro.ex.ac.uk> 

        * Item.pm: Added fluxdatestamp() function which allows you to append
	  a time stamp to all the Astro::Flux objects held in the Item. Also
	  addeddistancetostar() and within() methods to allow us to easily
	  figure out if one star is close to another.
	  
	* t/4_mpc.t: Updated tests again. Must be better way to do this?   
	
2005-06-16 Alasdair Allan <aa@astro.ex.ac.uk>  (Version 4.0)

        * Query/Query/*.pm: All query classes updated. The package passes
	  all test, however many parts of the test suite do not have anything
	  like full coverage. I think we have to expect some bugs at this
	  stage.Theoretically fully working Astro::Catalog distribution
	  however, so lets badge this as V4.

2005-06-15 Alasdair Allan <aa@astro.ex.ac.uk>

        * Basic fixes to Catalog.pm and IO/Cluster.pm to support the new
	  changes. Hopefully this will provide a springboard so I can fix
	  the rest of the IO and Query modules. This is a big job...
	  
	* IO/*.pm: All IO classes working, I think?  

2005-06-12 Alasdair Allan <aa@astro.ex.ac.uk>

        * Series of changes breaking backwards compatibility in Item.pm to
	  support the new Astro::Fluxes objects and Number::Uncertainty for
	  magnitude and colour support. These changes break all other classes
	  in the package.

2005-06-04  Alasdair Allan <aa@astro.ex.ac.uk>

        * Removed Astro::Catalog::Star and Astro::Catalog::Star::Morphology